# marching_cubes

./: .gitignore  Cargo.toml  README.md  build_padded_ktx.py  build_texture_ktx.py  hardware_requirements.txt  helpful_notes  plot_metrics.py  preview_tile.py  resize.py  technical_docs.md  todo
.cargo/: config.toml
assets/: texture_array.ktx2  texture_atlas.ktx2
assets/shaders/: chunk_gen_compute.wgsl  heightmap_compute.wgsl  triplanar.wgsl
benches/: bench_util.rs  chunk_generation.rs  column_range_map.rs  driver_bench.rs  file_io.rs  noise_bench.rs  svo_bench.rs
benches/bench_data/: chunk_index_data.txt
plots/generation_baseline/: queue_size_thread_0.csv  queue_size_thread_1.csv  queue_size_thread_10.csv  queue_size_thread_11.csv  queue_size_thread_12.csv  queue_size_thread_13.csv  queue_size_thread_2.csv  queue_size_thread_3.csv  queue_size_thread_4.csv  queue_size_thread_5.csv  queue_size_thread_6.csv  queue_size_thread_7.csv  queue_size_thread_8.csv  queue_size_thread_9.csv  throughput_thread_0.csv  throughput_thread_1.csv  throughput_thread_10.csv  throughput_thread_11.csv  throughput_thread_12.csv  throughput_thread_13.csv  throughput_thread_2.csv  throughput_thread_3.csv  throughput_thread_4.csv  throughput_thread_5.csv  throughput_thread_6.csv  throughput_thread_7.csv  throughput_thread_8.csv  throughput_thread_9.csv
plots/load_balancer_design1/: queue_size_thread_0.csv  queue_size_thread_1.csv  queue_size_thread_10.csv  queue_size_thread_11.csv  queue_size_thread_12.csv  queue_size_thread_13.csv  queue_size_thread_2.csv  queue_size_thread_3.csv  queue_size_thread_4.csv  queue_size_thread_5.csv  queue_size_thread_6.csv  queue_size_thread_7.csv  queue_size_thread_8.csv  queue_size_thread_9.csv  throughput_thread_0.csv  throughput_thread_1.csv  throughput_thread_10.csv  throughput_thread_11.csv  throughput_thread_12.csv  throughput_thread_13.csv  throughput_thread_2.csv  throughput_thread_3.csv  throughput_thread_4.csv  throughput_thread_5.csv  throughput_thread_6.csv  throughput_thread_7.csv  throughput_thread_8.csv  throughput_thread_9.csv
plots/load_baseline/: queue_size_thread_0.csv  queue_size_thread_1.csv  queue_size_thread_10.csv  queue_size_thread_11.csv  queue_size_thread_12.csv  queue_size_thread_13.csv  queue_size_thread_2.csv  queue_size_thread_3.csv  queue_size_thread_4.csv  queue_size_thread_5.csv  queue_size_thread_6.csv  queue_size_thread_7.csv  queue_size_thread_8.csv  queue_size_thread_9.csv  throughput_thread_0.csv  throughput_thread_1.csv  throughput_thread_10.csv  throughput_thread_11.csv  throughput_thread_12.csv  throughput_thread_13.csv  throughput_thread_2.csv  throughput_thread_3.csv  throughput_thread_4.csv  throughput_thread_5.csv  throughput_thread_6.csv  throughput_thread_7.csv  throughput_thread_8.csv  throughput_thread_9.csv
plots/pre_load_balancer/: queue_size_thread_0.csv  queue_size_thread_1.csv  queue_size_thread_10.csv  queue_size_thread_11.csv  queue_size_thread_12.csv  queue_size_thread_13.csv  queue_size_thread_2.csv  queue_size_thread_3.csv  queue_size_thread_4.csv  queue_size_thread_5.csv  queue_size_thread_6.csv  queue_size_thread_7.csv  queue_size_thread_8.csv  queue_size_thread_9.csv  throughput_thread_0.csv  throughput_thread_1.csv  throughput_thread_10.csv  throughput_thread_11.csv  throughput_thread_12.csv  throughput_thread_13.csv  throughput_thread_2.csv  throughput_thread_3.csv  throughput_thread_4.csv  throughput_thread_5.csv  throughput_thread_6.csv  throughput_thread_7.csv  throughput_thread_8.csv  throughput_thread_9.csv
src/: build_initial_area.rs  constants.rs  conversions.rs  lib.rs  main.rs  marching_cubes.rs  sparse_voxel_octree.rs  terrain_generation.rs  triangle_table.rs
src/data_loader/: chunk_loader.rs  column_range_map.rs  driver.rs  file_loader.rs  mod.rs
src/deformable_terrain/: chunk_entity_map.rs  chunk_generator.rs  column_range_map.rs  debug_lines.rs  digging.rs  driver.rs  driver_debug_ui.rs  file_loader.rs  mod.rs  plugin.rs  sparse_voxel_octree.rs  terrain.rs  terrain_material.rs
src/deformable_terrain/marching_cubes/: mc.rs  mod.rs  tables.rs
src/lighting/: lighting_main.rs  mod.rs
src/marching_cubes/: color_provider.rs  mc.rs  mod.rs  tables.rs
src/player/: digging.rs  mod.rs  player.rs
src/settings/: mod.rs  settings_driver.rs
src/terrain/: chunk_compute_pipeline.rs  chunk_generator.rs  chunk_thread.rs  heightmap_compute_pipeline.rs  lod_zones.rs  mod.rs  procedural_trees.rs  terrain.rs  terrain_material.rs
src/ui/: configurable_settings.rs  crosshair.rs  debug_lines.rs  driver_debug_ui.rs  menu.rs  minimap.rs  mod.rs
