[package]
name = "marching_cubes"
version = "0.1.0"
edition = "2024"

[dependencies]
iyes_perf_ui = { git = "https://github.com/Saratii/iyes_perf_ui", branch = "bevy-0.17" }
rand = "0.9.2"
criterion = "0.7.0"
fastnoise2 = "0.3.2"
mimalloc = "0.1.48"
bevy_rapier3d = { path = "C:/Programming/bevy_rapier/bevy_rapier3d", features = [ "simd-stable", "debug-render" ] }
serde_json = "1.0.145"
serde = "1.0.228"
crossbeam-channel = "0.5.15"
bevy = { version = "0.18", default-features = false, features = ["3d", "debug"] }
bytemuck = "1.24.0"
wgpu = "27"
pollster = "0.4.0"
rustc-hash = "2.1.1"
parking_lot = "0.12.5"

[[bench]]
name = "chunk_generation"
harness = false

[[bench]]
name = "file_io"
harness = false

[[bench]]
name = "svo_bench"
harness = false

[[bench]]
name = "noise_bench"
harness = false

#cargo bench --bench chunk_generation -- deserialize_chunk_data

[profile.release]
debug = true

[features]
timers = [] #cargo run -r --features timers
debug = []  #cargo run -r --features "timers,debug"

