[package]
name = "marching_cubes"
version = "0.1.0"
edition = "2024"

[dependencies]
iyes_perf_ui = { git = "https://github.com/Saratii/iyes_perf_ui", branch = "bevy-0.17" }
rand = "0.9.2"
criterion = "0.7.0"
fastnoise2 = "0.3.2"
mimalloc = "0.1.48"
bevy_rapier3d = { git = "https://github.com/Saratii/bevy_rapier", branch = "master", features = [ "simd-stable", "debug-render" ] }
serde_json = "1.0.145"
serde = "1.0.228"
crossbeam-channel = "0.5.15"
bevy = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0", default-features = false, features = ["3d", "debug", "ui", "bevy_dev_tools"] }
bytemuck = "1.24.0"
wgpu = "29.0.4"
pollster = "0.4.0"
rustc-hash = "2.1.1"
parking_lot = "0.12.5"

[[bench]]
name = "chunk_generation"
harness = false

[[bench]]
name = "file_io"
harness = false

[[bench]]
name = "column_range_map"
harness = false

[[bench]]
name = "noise_bench"
harness = false

[[bench]]
name = "driver_bench"
harness = false

#cargo bench --bench chunk_generation -- deserialize_chunk_data

[profile.release]
debug = true

# Redirect all crates.io references to bevy (e.g. from bevy_rapier3d) to the fork.
# Patch sections are only honored in the top-level workspace, so the identical
# block in the bevy_rapier fork's Cargo.toml does nothing when consumed from here.
[patch.crates-io]
bevy = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_app = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_asset = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_camera = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_color = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_core_pipeline = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_derive = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_ecs = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_gizmos = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_image = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_input = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_light = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_log = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_math = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_mesh = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_pbr = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_picking = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_platform = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_reflect = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_render = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_shader = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_state = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_time = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_transform = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_ui_render = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_utils = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_window = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }
bevy_winit = { git = "https://github.com/Saratii/bevy", branch = "release-0.19.0" }

[features]
timers = [] #cargo run -r --features timers
debug = []  #cargo run -r --features "timers,debug"

